# MAM

./: .gitignore  Cargo.toml  README.md
bindings/: Cargo.toml  Xargo.toml  artik053.json  remove_methods.sh
bindings/src/: lib.rs  main.rs
bindings/src/mam/: simple.rs
bindings/src/merkle/: simple.rs
mam/: Cargo.toml
mam/src/: auth.rs  errors.rs  lib.rs  mam.rs  mask.rs  pascal.rs
merkle/: Cargo.toml
merkle/src/: lib.rs  simple.rs
pascal/: Cargo.toml
pascal/src/: lib.rs  pascal.rs
