[package]
name = "iota-mam-bindings"
version = "0.1.0"
authors = ["Paul D Handy <paul.d.handy@gmail.com>"]
keywords = ["no_std"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "iota-mam"
path = "src/main.rs"
doc = false
doctest = true
test = false

[features]
default = []

[dependencies]
iota-mam = { path = "../mam" }

cty = { git = "https://github.com/japaric/cty.git" }

[dependencies.iota-merkle]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-sign]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-trytes]
git = "https://github.com/iotaledger/iota.rs"
features = ["alloc"]
[dependencies.iota-curl]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-curl-cpu]
git = "https://github.com/iotaledger/iota.rs"

