[package]
name = "iota-mam-bindings"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>", "Paul D Handy <paul.d.handy@gmail.com>"]
keywords = ["no_std"]

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
iota-mam = { path = "../mam" }

cty = { git = "https://github.com/japaric/cty.git" }
iota-bindings-shared = { git = "https://github.com/iotaledger/iota-bindings.git"}

[dependencies.iota-merkle]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-sign]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-trytes]
git = "https://github.com/iotaledger/iota.rs"
features = ["alloc"]
[dependencies.iota-curl]
git = "https://github.com/iotaledger/iota.rs"
[dependencies.iota-curl-cpu]
git = "https://github.com/iotaledger/iota.rs"

